whitespace reduction & button fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great");
-
 :host {
   display: flex;
   flex-direction: column;
   align-items: stretch;
   margin: 0 auto;
   width: 30rem;
-  height: 54rem;
+  height: 100%;
   max-width: 100vw;
-  max-height: 100vh;
 }
