--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -4,7 +4,7 @@
 
 input {
   flex: 1;
-  height: 3.5rem;
+  height: 3.0rem;
   padding: 0 0.5rem;
   font-size: 1rem;
   outline: none;
