--- a/src/app/songs/songs.component.scss
+++ b/src/app/songs/songs.component.scss
@@ -1,6 +1,6 @@
 :host {
   flex: 1;
-  margin: 1rem 0;
+  margin: 1rem 0 0;
   padding: 0 1rem;
   overflow-x: hidden;
   overflow-y: auto;
