--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,13 @@
 
 @import "~normalize-scss/sass/normalize/import-now";
 @import url("https://fonts.googleapis.com/css?family=Cabin+Sketch:400,700");
+@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great");
 
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 html,
